--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     position: fixed;
     overflow: auto;
     z-index: 999;
-    background-color: #000;
+    background-color: whitesmoke;
     padding: 35px 0 10px 0;
 }
 
@@ -47,14 +47,14 @@
 .box-content-aside-content-div h2 {
     font-size: 2.5rem;
     font-weight: 500;
-    color: white;
+    color: #111;
     font-family: "Playfair Display", Georgia, serif;
     cursor: pointer;
 }
 
 .box-content-aside-content-div p {
     font-family: "Quicksand", Arial, sans-serif;
-    color: lightgray;
+    color: #333;
     font-size: 1.6rem;
     font-weight: 400;
 }
@@ -73,7 +73,7 @@
 
 .nav-ol-tag a {
     position: relative;
-    color: whitesmoke;
+    color: #111;
     font-size: 1.7rem;
     text-decoration: none;
     text-transform: capitalize;
@@ -84,7 +84,7 @@
 }
 
 .nav-ol-tag a:hover {
-    color: lightgray;
+    color: #222;
     text-decoration: none;
     letter-spacing: 1.1px;
 }
@@ -96,7 +96,7 @@
     left: 0;
     width: 65%;
     height: 2px;
-    background: lightgray;
+    background: #222;
     transform: scale(0);
     transform-origin: left;
     transition: all 0.3s ease-in-out;
@@ -113,14 +113,14 @@
 
 .aside-footer-div p {
     font-family: "Quicksand", Arial, sans-serif;
-    color: lightgray;
+    color: #222;
     font-size: 1.4rem;
     font-weight: 400;
 }
 
 .aside-footer-div span {
     font-family: "Quicksand", Arial, sans-serif;
-    color: lightgray;
+    color: #222;
     font-size: 1.5rem;
     font-weight: 400;
     line-height: 28px;
@@ -171,6 +171,26 @@
     line-height: 50px;
 }
 
+.home-content-div button {
+    padding: 10px 18px;
+    cursor: pointer;
+    background-color: whitesmoke;
+    border: 1px solid #999;
+    border-radius: 30px;
+    outline: none;
+    font-size: 1.5rem;
+    color: #222;
+    font-weight: 500;
+    transition: all 0.5s ease-in-out;
+    box-shadow: inset 0 0 0 0 #111;
+}
+
+.home-content-div button:hover {
+    color: white;
+    border: 1px solid #111;
+    box-shadow: inset 0 0 300px 0 #111;
+}
+
 /* about us ` */
 
 .about-us-top-content {
@@ -206,22 +226,131 @@
 }
 
 .boxes-about-us-flex-div {
-    margin: 25px 25px;
+    margin: 25px 20px;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 
 .boxes-about-us-content {
-    border: 2px solid #442525;
+    border: 2px solid lightgray;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 15px 0;
+    margin: 25px 0;
+    position: relative;
 
     text-align: center;
-    width: 200px;
+    width: 170px;
     height: 120px;
 
     cursor: pointer;
+}
+
+.boxes-about-us-content h2 {
+    font-size: 1.7rem;
+    font-weight: 400;
+    font-family: "Playfair Display", Georgia, serif;
+}
+
+.icon-about {
+    position: absolute;
+    top: -25px;
+    width: 50px;
+    height: 50px;
+    background-color: lavender;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+
+    border-radius: 25% 0 25% 0;
+    /* transform: rotate(140deg); */
+}
+
+.icon-abt-01 {
+    background-color: teal;
+    color: white;
+}
+
+.icon-abt-01-box-brd {
+    border-bottom: 2px solid teal;
+}
+
+.icon-abt-02 {
+    background-color: #ec5453;
+    color: white;
+}
+
+.icon-abt-02-box-brd {
+    border-bottom: 2px solid #ec5453;
+}
+
+.icon-abt-03 {
+    background-color: #f9bf3f;
+    color: white;
+}
+
+.icon-abt-03-box-brd {
+    border-bottom: 2px solid #f9bf3f;
+}
+
+.icon-abt-04 {
+    background-color: #a84cb8;
+    color: white;
+}
+
+.icon-abt-04-box-brd {
+    border-bottom: 2px solid #a84cb8;
+}
+
+.about-us-project-celebrate-main-div {
+    margin: 10px 20px;
+    background-color: #f9bf3f;
+    width: 100%;
+    height: 150px;
+
+    display: flex;
+    align-items: center;
+
+    padding: 0 30px;
+}
+
+.about-us-project-celebrate-main-div h1 {
+    font-size: 2.5rem;
+    font-weight: 800;
+    color: #222;
+    font-family: 'lato', 'sans-serif';
+    line-height: 40px;
+}
+
+
+/* services  */
+
+.services-main-div {
+    margin: 100px 0 0 20px;
+    padding: 30px 0;
+}
+
+.services-top-content-div h6 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #17202A;
+    font-family: "Quicksand", Arial, sans-serif;
+    cursor: pointer;
+}
+
+.services-top-content-div h2 {
+    font-size: 2.5rem;
+    font-weight: 600;
+    color: #17202A;
+    font-family: "Playfair Display", Georgia, serif;
+    cursor: pointer;
+    line-height: 42px;
 }
