--- a/style.css
+++ b/style.css
@@ -354,3 +354,98 @@
     cursor: pointer;
     line-height: 42px;
 }
+
+.box-service-div {
+    /* border: 1px solid #999; */
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: 0 0 8px 0 gray;
+    position: relative;
+    margin: 50px 5px 20px 5px;
+    height: 350px;
+    cursor: pointer;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.icon-service-div {
+    position: absolute;
+    top: -20px;
+    left: 0;
+    right: 0;
+    width: 75px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    background: #2c98f0;
+}
+
+.icon-service-div i {
+    font-size: 25px;
+    color: white;
+}
+
+.icon-service-div::before {
+    position: absolute;
+    content: "";
+    top: -30px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 35px 30px 38px;
+    border-color: transparent transparent #2c98f0 transparent;
+}
+
+.icon-service-div::after {
+    position: absolute;
+    content: "";
+    bottom: -30px;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 30px 38px 0 38px;
+    border-color: #2c98f0 transparent transparent transparent;
+}
+
+.box-services-content-div {
+    padding: 25px 0 0 0;
+}
+
+.box-services-content-div h2 {
+    text-align: center;
+    font-size: 2.5rem;
+    font-weight: 500;
+    color: #111;
+    font-family: "Playfair Display", Georgia, serif;
+    cursor: pointer;
+}
+
+.box-services-content-div p {
+    text-align: justify;
+    padding: 10px 6px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.box-services-content-div ol {
+    list-style-type: none;
+}
+
+.box-services-content-div ol li {
+    padding: 6px;
+}
+
+.box-services-content-div ol li a {
+    color: #222;
+    font-weight: 500;
+    font-family: 'Poppins', sans-serif;
+}
+
+.box-services-content-div ol li i {
+    color: darkgoldenrod;
+}
