--- a/style.css
+++ b/style.css
@@ -334,6 +334,7 @@
 /* services  */
 
 .services-main-div {
+    position: relative;
     margin: 100px 0 0 20px;
     padding: 30px 0;
 }
@@ -448,4 +449,49 @@
 
 .box-services-content-div ol li i {
     color: darkgoldenrod;
+}
+
+/* cover bg image counting  */
+.bg-image-div-main-counting {
+    margin: 50px 20px;
+}
+
+.cover-bg-img-couting-div {
+    width: 138%;
+    height: 300px;
+    position: relative;
+    background: url(cover_bg_1.jpg.webp);
+    background-attachment: fixed;
+    background-position: center center;
+}
+
+.counting-content-div {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.counting-box-main-div {
+    width: 150px;
+    height: 100px;
+    border: 1px solid white;
+    background-color: #9999;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    line-height: 30px;
+}
+
+.counting-box-main-div i {
+    color: rgb(22, 22, 22);
+}
+
+.num-counting-span-1 {
+    color: rgb(20, 20, 20);
+}
+
+.num-counting-span-2 {
+    color: rgb(24, 23, 23);
 }
